--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,19 @@
 <html>
-  <head>
-    <title>Homeflow FE Tech Test</title>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet" />
-  </head>
+<head>
+  <title>Homeflow FE Tech Test</title>
 
-  <body>
-    <main>
-      <h1>Homeflow Front-end Tech Test</h1>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet" />
+</head>
 
-      <div id="app"></div>
-    </main>
+<body>
+  <main>
+    <h1>Homeflow Front-end Tech Test</h1>
+    <div id="root"></div>
+  </main>
 
-    <script src="/main.js"></script>
-  </body>
+  <script src="/main.js"></script>
+</body>
+
 </html>
